--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>关于老师 - CC Art 户外丙烯写生课</title>
+    <title>关于老师 - CC Art Studio 丙烯写生课</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -73,7 +73,7 @@
                     <div class="w-10 h-10 bg-white rounded-full flex items-center justify-center">
                         <span class="text-orange-500 font-bold text-lg">🎨</span>
                     </div>
-                    <span class="text-white font-bold text-xl">CC ART</span>
+                    <span class="text-white font-bold text-xl">CC Art Studio</span>
                 </div>
                 
                 <div class="hidden md:flex space-x-1">
@@ -138,8 +138,8 @@
                         <div class="mb-8">
                             <h2 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Chenxi Zhang</h2>
                             <p class="text-2xl md:text-3xl text-orange-600 font-semibold">
-                              <span class="lang-zh">CC Art 创始人 & 导师</span>
-                              <span class="lang-en">Founder & Instructor of CC Art</span>
+                              <span class="lang-zh">CC Art Studio 创始人 & 导师</span>
+                              <span class="lang-en">Founder & Instructor of CC Art Studio</span>
                             </p>
                         </div>
                         <div class="space-y-6 text-gray-600 text-lg md:text-xl">
@@ -421,7 +421,7 @@
                             </div>
                         </div>
                         <p class="text-gray-600 text-base italic">
-                            "选择CC Art真的很对！老师的专业背景很强，不仅教传统绘画，
+                            "选择CC Art Studio真的很对！老师的专业背景很强，不仅教传统绘画，
                             还会分享一些现代艺术的理念。孩子的艺术视野开阔了很多。"
                         </p>
                     </div>
@@ -615,8 +615,8 @@
                       <span class="lang-en">Dedicated teaching, helping every student discover the beauty of art</span>
                     </p>
                     <p class="text-gray-500 text-base">
-                      <span class="lang-zh">CC Art 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc 或 a747594101</span>
-                      <span class="lang-en">CC Art All Rights Reserved © 2025 | Contact: 626-726-7965 | WeChat: xxxi_zc 或 a747594101</span>
+                      <span class="lang-zh">CC Art Studio 版权所有 © 2025 | 咨询: 626-726-7965 | 微信: xxxi_zc 或 a747594101</span>
+                      <span class="lang-en">CC Art Studio All Rights Reserved © 2025 | Contact: 626-726-7965 | WeChat: xxxi_zc 或 a747594101</span>
                     </p>
                 </div>
             </footer>
@@ -638,10 +638,10 @@
             body.setAttribute('data-lang', newLang);
             try { localStorage.setItem('ccart-language', newLang); } catch (e) {}
             if (newLang === 'en') {
-                document.title = 'About Teacher - CC Art Outdoor Acrylic Sketching Course';
+                document.title = 'About Teacher - CC Art Studio Outdoor Acrylic Sketching Course';
                 document.documentElement.lang = 'en';
             } else {
-                document.title = '关于老师 - CC Art 户外丙烯写生课';
+                document.title = '关于老师 - CC Art Studio 户外丙烯写生课';
                 document.documentElement.lang = 'zh-CN';
             }
         }
@@ -651,7 +651,7 @@
                 if (savedLang && savedLang !== 'zh') {
                     document.body.setAttribute('data-lang', savedLang);
                     if (savedLang === 'en') {
-                        document.title = 'About Teacher - CC Art Outdoor Acrylic Sketching Course';
+                        document.title = 'About Teacher - CC Art Studio Outdoor Acrylic Sketching Course';
                         document.documentElement.lang = 'en';
                     }
                 }
