--- a/policy.html
+++ b/policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>课程政策 - CC Art 户外丙烯写生课</title>
+    <title>课程政策 - CC Art Studio 户外丙烯写生课</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -55,7 +55,7 @@
                     <div class="w-10 h-10 bg-white rounded-full flex items-center justify-center">
                         <span class="text-orange-500 font-bold text-lg">🎨</span>
                     </div>
-                    <span class="text-white font-bold text-xl">CC ART</span>
+                    <span class="text-white font-bold text-xl">CC Art Studio</span>
                 </div>
                 <div class="hidden md:flex space-x-1">
                     <a href="index.html" class="nav-link px-4 py-2 text-white font-medium"><span class="lang-zh">首页</span><span class="lang-en">Home</span></a>
@@ -317,7 +317,7 @@
                             <ul class="space-y-2">
                                 <li><span class="lang-zh">• 搬家或长期出差可协商处理</span><span class="lang-en">• Moving or long-term business trips may be negotiated</span></li>
                                 <li><span class="lang-zh">• 重大疾病或意外可特殊考虑</span><span class="lang-en">• Major illness or accident may be specially considered</span></li>
-                                <li><span class="lang-zh">• 最终解释权归CC Art所有</span><span class="lang-en">• Final interpretation right belongs to CC Art</span></li>
+                                <li><span class="lang-zh">• 最终解释权归CC Art Studio所有</span><span class="lang-en">• Final interpretation right belongs to CC Art Studio</span></li>
                             </ul>
                         </div>
                     </div>
@@ -339,7 +339,7 @@
                             <ul class="space-y-2">
                                 <li><span class="lang-zh">• 课程期间可能拍摄照片用于教学记录</span><span class="lang-en">• Photos may be taken during class for teaching records</span></li>
                                 <li><span class="lang-zh">• 照片可能用于宣传推广（可联系选择退出）</span><span class="lang-en">• Photos may be used for promotional purposes (contact us to opt out)</span></li>
-                                <li><span class="lang-zh">• 学生作品照片归CC Art所有</span><span class="lang-en">• Student work photos belong to CC Art</span></li>
+                                <li><span class="lang-zh">• 学生作品照片归CC Art Studio所有</span><span class="lang-en">• Student work photos belong to CC Art Studio</span></li>
                                 <li><span class="lang-zh">• 如不同意拍摄请提前告知</span><span class="lang-en">• Please inform us in advance if you do not agree to be photographed</span></li>
                             </ul>
                         </div>
@@ -349,7 +349,7 @@
                               <span class="lang-en">Limitation of Liability</span>
                             </h4>
                             <ul class="space-y-2">
-                                <li><span class="lang-zh">• CC Art承担教学期间的基本安全责任</span><span class="lang-en">• CC Art is responsible for basic safety during class</span></li>
+                                <li><span class="lang-zh">• CC Art Studio承担教学期间的基本安全责任</span><span class="lang-en">• CC Art Studio is responsible for basic safety during class</span></li>
                                 <li><span class="lang-zh">• 孩子个人物品遗失不承担责任</span><span class="lang-en">• Not responsible for loss of personal belongings</span></li>
                                 <li><span class="lang-zh">• 因孩子个人原因造成的意外不承担责任</span><span class="lang-en">• Not responsible for accidents caused by students' own actions</span></li>
                                 <li><span class="lang-zh">• 建议购买个人意外保险</span><span class="lang-en">• Personal accident insurance is recommended</span></li>
@@ -360,8 +360,8 @@
 
                 <!-- 顶部横幅提示 -->
                 <div class="bg-red-100 border border-red-200 text-red-400 px-4 py-2 text-center text-sm">
-                    <span class="lang-zh">本课程由 CC Art 团队/个人独立运营，具备完整教学流程与服务规范。品牌注册正在进行中，所有课程条款在未来将自动升级为正式协议</span>
-                    <span class="lang-en">This course is independently operated by the CC Art team/individual, with a complete teaching process and service standards. Brand registration is in progress; all course terms will be upgraded to formal agreements in the future.</span>
+                    <span class="lang-zh">本课程由 CC Art Studio Studio 以家庭式小规模形式运营，当前运营结构已完成注册并符合法规要求，后续将根据品牌发展自动升级相关协议</span>
+                    <span class="lang-en">CC Art Studio Studio is a registered FBN (Fictitious Business Name) and is currently operating under a valid business license issued by the City of Irvine.</span>
                 </div>
                 
                 <footer class="text-sm text-gray-500 text-center mt-20 mb-10">
@@ -370,8 +370,8 @@
                       <span class="lang-en">All policy content is subject to reasonable negotiation for final interpretation. Major changes will be announced in advance and updated on this page.</span>
                     </p>
                     <p>
-                      <span class="lang-zh">© 2025 CC Art Studio. 本页面内容仅作为临时协议使用，待注册机构后将依法修订。</span>
-                      <span class="lang-en">© 2025 CC Art Studio. This page serves as a temporary agreement and will be revised in accordance with the law after official registration.</span>
+                      <span class="lang-zh">© 2025 CC Art Studio Studio. 本页面内容仅作为临时协议使用，待注册机构后将依法修订。</span>
+                      <span class="lang-en">© 2025 CC Art Studio Studio. This page serves as a temporary agreement and will be revised in accordance with the law after official registration.</span>
                     </p>
                 </footer>
             </div>
@@ -387,10 +387,10 @@
         body.setAttribute('data-lang', newLang);
         try { localStorage.setItem('ccart-language', newLang); } catch (e) {}
         if (newLang === 'en') {
-            document.title = 'Course Policy - CC Art Outdoor Acrylic Sketching Course';
+            document.title = 'Course Policy - CC Art Studio Outdoor Acrylic Sketching Course';
             document.documentElement.lang = 'en';
         } else {
-            document.title = '课程政策 - CC Art 户外丙烯写生课';
+            document.title = '课程政策 - CC Art Studio 户外丙烯写生课';
             document.documentElement.lang = 'zh-CN';
         }
     }
@@ -400,7 +400,7 @@
             if (savedLang && savedLang !== 'zh') {
                 document.body.setAttribute('data-lang', savedLang);
                 if (savedLang === 'en') {
-                    document.title = 'Course Policy - CC Art Outdoor Acrylic Sketching Course';
+                    document.title = 'Course Policy - CC Art Studio Outdoor Acrylic Sketching Course';
                     document.documentElement.lang = 'en';
                 }
             }
