--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>孩子作品 - CC Art 户外丙烯写生课</title>
+    <title>孩子作品 - CC Art Studio 户外丙烯写生课</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -149,7 +149,7 @@
                     <div class="w-10 h-10 bg-white rounded-full flex items-center justify-center">
                         <span class="text-orange-500 font-bold text-lg">🎨</span>
                     </div>
-                    <span class="text-white font-bold text-xl">CC ART</span>
+                    <span class="text-white font-bold text-xl">CC Art Studio</span>
                 </div>
                 
                 <div class="hidden md:flex space-x-1">
@@ -195,7 +195,7 @@
                     <div>
                         <h2 class="text-2xl font-bold text-gray-800 mb-4 flex items-center">
                             <span class="w-10 h-10 bg-orange-100 rounded-full flex items-center justify-center mr-3">🌟</span>
-                            为什么选择CC Art?
+                            为什么选择CC Art Studio?
                         </h2>
                         <div class="space-y-4 text-gray-600">
                             <div class="flex items-start">
@@ -293,7 +293,7 @@
                 <span class="text-orange-400">📧 ccartirvine@google.com</span>
             </div>
             <p class="text-gray-500 text-sm mt-4">
-                CC Art 版权所有 © 2025
+                CC Art Studio 版权所有 © 2025
             </p>
         </div>
     </footer>
