--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CC Art 户外丙烯写生课招生啦！</title>
+    <title>CC Art Studio 丙烯写生课招生啦！</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap');
@@ -334,7 +334,7 @@
                     <div class="w-10 h-10 bg-white rounded-full flex items-center justify-center">
                         <span class="text-orange-500 font-bold text-lg">🎨</span>
                     </div>
-                    <span class="text-white font-bold text-xl">CC ART</span>
+                    <span class="text-white font-bold text-xl">CC Art Studio</span>
                 </div>
                 
                 <!-- Desktop Navigation -->
@@ -405,7 +405,7 @@
                 <div class="absolute inset-0 bg-black opacity-10"></div>
                 <div class="relative z-10">
                     <h1 class="text-4xl font-bold text-white mb-2 tracking-wide">
-                        CC ART
+                        CC Art Studio
                     </h1>
                     <p class="text-xl text-white opacity-90 mb-4">
                         <span class="lang-zh">户外丙烯写生课</span>
@@ -684,8 +684,8 @@
                     <!-- Carousel Caption -->
                     <div class="text-center mt-6">
                         <p class="text-gray-600 text-sm">
-                            <span class="lang-zh">🎨 想加入我们cc art家庭吗</span>
-                            <span class="lang-en">🎨 Want to join our CC Art family?</span>
+                            <span class="lang-zh">🎨 想加入我们CC Art Studio家庭吗</span>
+                            <span class="lang-en">🎨 Want to join our CC Art Studio family?</span>
                         </p>
                     </div>
                 </div>
@@ -694,8 +694,8 @@
                 <div class="flex justify-center mt-8">
                     <div class="bg-orange-50 rounded-xl px-6 py-3 flex items-center space-x-3 shadow-md">
                         <span class="text-orange-500 text-xl">📍</span>
-                        <span class="lang-zh font-semibold">Irvine Great Park 大公园</span>
-                        <span class="lang-en font-semibold">Irvine Great Park</span>
+                        <span class="lang-zh font-semibold">尔湾地区公园及艺术工作室 </span>
+                        <span class="lang-en font-semibold">Irvine Local Parks & Art Studios</span>
                     </div>
                 </div>
             </div>
@@ -1025,8 +1025,8 @@
             <!-- Footer -->
             <div class="bg-gray-100 px-8 py-4 text-center">
                 <p class="text-xs text-gray-500">
-                    <span class="lang-zh">* 课程价格如有调整，以最新公布为准 | CC Art 版权所有</span>
-                    <span class="lang-en">* Course prices subject to change. Latest announcements prevail | CC Art All Rights Reserved</span>
+                    <span class="lang-zh">* 课程价格如有调整，以最新公布为准 | CC Art Studio 版权所有</span>
+                    <span class="lang-en">* Course prices subject to change. Latest announcements prevail | CC Art Studio All Rights Reserved</span>
                 </p>
             </div>
         </div>
@@ -1051,10 +1051,10 @@
             
             // Update page title
             if (newLang === 'en') {
-                document.title = 'CC Art Outdoor Acrylic Sketching Course';
+                document.title = 'CC Art Studio Outdoor Acrylic Sketching Course';
                 document.documentElement.lang = 'en';
             } else {
-                document.title = 'CC Art 户外丙烯写生课';
+                document.title = 'CC Art Studio 户外丙烯写生课';
                 document.documentElement.lang = 'zh-CN';
             }
         }
@@ -1066,7 +1066,7 @@
                 if (savedLang && savedLang !== 'zh') {
                     document.body.setAttribute('data-lang', savedLang);
                     if (savedLang === 'en') {
-                        document.title = 'CC Art Outdoor Acrylic Sketching Course';
+                        document.title = 'CC Art Studio Outdoor Acrylic Sketching Course';
                         document.documentElement.lang = 'en';
                     }
                 }
