--- a/policy.html
+++ b/policy.html
@@ -360,8 +360,8 @@
 
                 <!-- 顶部横幅提示 -->
                 <div class="bg-red-100 border border-red-200 text-red-400 px-4 py-2 text-center text-sm">
-                    <span class="lang-zh">本课程由 CC Art Studio Studio 以家庭式小规模形式运营，当前运营结构已完成注册并符合法规要求，后续将根据品牌发展自动升级相关协议</span>
-                    <span class="lang-en">CC Art Studio Studio is a registered FBN (Fictitious Business Name) and is currently operating under a valid business license issued by the City of Irvine.</span>
+                    <span class="lang-zh">本课程由 CC Art Studio 以家庭式小规模形式运营，当前运营结构已完成注册并符合法规要求，后续将根据品牌发展自动升级相关协议</span>
+                    <span class="lang-en">CC Art Studio is a registered FBN (Fictitious Business Name) and is currently operating under a valid business license issued by the City of Irvine.</span>
                 </div>
                 
                 <footer class="text-sm text-gray-500 text-center mt-20 mb-10">
@@ -370,8 +370,8 @@
                       <span class="lang-en">All policy content is subject to reasonable negotiation for final interpretation. Major changes will be announced in advance and updated on this page.</span>
                     </p>
                     <p>
-                      <span class="lang-zh">© 2025 CC Art Studio Studio. 本页面内容仅作为临时协议使用，待注册机构后将依法修订。</span>
-                      <span class="lang-en">© 2025 CC Art Studio Studio. This page serves as a temporary agreement and will be revised in accordance with the law after official registration.</span>
+                      <span class="lang-zh">© 2025 CC Art Studio. 本页面内容仅作为临时协议使用，待注册机构后将依法修订。</span>
+                      <span class="lang-en">© 2025 CC Art Studio. This page serves as a temporary agreement and will be revised in accordance with the law after official registration.</span>
                     </p>
                 </footer>
             </div>
