--- a/policy.html
+++ b/policy.html
@@ -360,8 +360,13 @@
 
                 <!-- 顶部横幅提示 -->
                 <div class="bg-red-100 border border-red-200 text-red-400 px-4 py-2 text-center text-sm">
-                    <span class="lang-zh">本课程由 CC Art Studio 以家庭式小规模形式运营，当前运营结构已完成注册并符合法规要求，后续将根据品牌发展自动升级相关协议</span>
-                    <span class="lang-en">CC Art Studio is a registered FBN (Fictitious Business Name) and is currently operating under a valid business license issued by the City of Irvine.</span>
+                    <span class="lang-zh">
+                    本课程由 CC Art Studio 合伙团队运营，已完成名称登记及商业执照注册，运营结构符合法规要求。后续将根据品牌发展逐步完善相关协议。
+                    </span>
+
+                    <span class="lang-en">
+                    CC Art Studio is a registered partnership with a valid Fictitious Business Name (FBN) and an active business license issued by the City of Irvine.
+                    </span>
                 </div>
                 
                 <footer class="text-sm text-gray-500 text-center mt-20 mb-10">
