--- a/policy.html
+++ b/policy.html
@@ -361,7 +361,7 @@
                 <!-- 顶部横幅提示 -->
                 <div class="bg-red-100 border border-red-200 text-red-400 px-4 py-2 text-center text-sm">
                     <span class="lang-zh">
-                    本课程由 CC Art Studio 合伙团队运营，已完成名称登记及商业执照注册，运营结构符合法规要求。后续将根据品牌发展逐步完善相关协议。
+                    本课程由 CC Art Studio 合伙团队运营，已完成名称登记及商业执照注册，运营结构符合法规要求。后续根据品牌发展逐步完善相关协议。
                     </span>
 
                     <span class="lang-en">
