--- a/policy.html
+++ b/policy.html
@@ -243,9 +243,22 @@
                               <span class="lang-en">Student Safety</span>
                             </h4>
                             <ul class="space-y-2">
-                                <li><span class="lang-zh">• 户外课程选址确保安全性</span><span class="lang-en">• Outdoor class locations are selected for safety</span></li>
-                                <li><span class="lang-zh">• 课程区域禁止无关人员进入</span><span class="lang-en">• Unrelated persons are not allowed in the class area</span></li>
-                                <li><span class="lang-zh">• 建议购买个人意外保险</span><span class="lang-en">• Personal accident insurance is recommended</span></li>
+                                <li>
+                                    <span class="lang-zh">• 户外课程将尽力选择相对安全的公共场地</span>
+                                    <span class="lang-en">• Outdoor class locations are carefully selected for relative safety in public settings</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 鉴于为公共空间，主办方无法完全控制现场人员进出</span>
+                                    <span class="lang-en">• As classes are held in public areas, full control over access cannot be guaranteed</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 建议家长陪同在旁，确保孩子安全</span>
+                                    <span class="lang-en">• Parents are encouraged to stay nearby to help ensure their child's safety</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 强烈建议为孩子购买个人意外保险</span>
+                                    <span class="lang-en">• Personal accident insurance is strongly recommended</span>
+                                </li>
                             </ul>
                         </div>
                         <div class="border-l-4 border-red-400 pl-6">
@@ -348,11 +361,23 @@
                               <span class="lang-zh">责任限制</span>
                               <span class="lang-en">Limitation of Liability</span>
                             </h4>
-                            <ul class="space-y-2">
-                                <li><span class="lang-zh">• CC Art Studio承担教学期间的基本安全责任</span><span class="lang-en">• CC Art Studio is responsible for basic safety during class</span></li>
-                                <li><span class="lang-zh">• 孩子个人物品遗失不承担责任</span><span class="lang-en">• Not responsible for loss of personal belongings</span></li>
-                                <li><span class="lang-zh">• 因孩子个人原因造成的意外不承担责任</span><span class="lang-en">• Not responsible for accidents caused by students' own actions</span></li>
-                                <li><span class="lang-zh">• 建议购买个人意外保险</span><span class="lang-en">• Personal accident insurance is recommended</span></li>
+                            <ul class="space-y-2 mt-4">
+                                <li>
+                                    <span class="lang-zh">• CC Art Studio将采取合理措施保障教学期间的基础安全</span>
+                                    <span class="lang-en">• CC Art Studio takes reasonable steps to ensure basic safety during class</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 对于孩子个人物品遗失不承担赔偿责任</span>
+                                    <span class="lang-en">• Not liable for loss of students' personal belongings</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 因孩子自身行为造成的意外，主办方不承担法律责任</span>
+                                    <span class="lang-en">• Not liable for accidents caused by students’ own actions</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 强烈建议为孩子购买个人意外保险</span>
+                                    <span class="lang-en">• Personal accident insurance is strongly recommended</span>
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -375,8 +400,8 @@
                       <span class="lang-en">All policy content is subject to reasonable negotiation for final interpretation. Major changes will be announced in advance and updated on this page.</span>
                     </p>
                     <p>
-                      <span class="lang-zh">© 2025 CC Art Studio. 本页面内容仅作为临时协议使用，待注册机构后将依法修订。</span>
-                      <span class="lang-en">© 2025 CC Art Studio. This page serves as a temporary agreement and will be revised in accordance with the law after official registration.</span>
+                      <span class="lang-zh">© 2025 CC Art Studio. 本页面内容为正式协议内容，将依法进行修订。</span>
+                      <span class="lang-en">© 2025 CC Art Studio. This page serves as an offical agreement and will be revised in accordance with the law.</span>
                     </p>
                 </footer>
             </div>
