--- a/policy.html
+++ b/policy.html
@@ -144,6 +144,22 @@
                                 <li><span class="lang-zh">• 过期课包恕不延期</span><span class="lang-en">• Expired packages cannot be extended</span></li>
                             </ul>
                         </div>
+                        <div class="border-l-4 border-blue-400 pl-6">
+                            <h4 class="font-semibold text-gray-800 mb-2">
+                            <span class="lang-zh">课程运营说明</span>
+                            <span class="lang-en">Class Operation Notice</span>
+                            </h4>
+                            <ul class="space-y-2">
+                                <li>
+                                    <span class="lang-zh">• 本课程为私人户外艺术课程，仅面向已报名的学生和家长，非对公众开放。</span>
+                                    <span class="lang-en">• This is a private outdoor art class, exclusively for enrolled students and their families. It is not open to the public.</span>
+                                </li>
+                                <li>
+                                    <span class="lang-zh">• 我们不接受临时报名、现场加入，也不接受任何形式的商业推广合作。</span>
+                                    <span class="lang-en">• We do not accept walk-ins, on-site sign-ups, or any form of commercial promotion or sponsorship.</span>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
 
