--- a/index.html
+++ b/index.html
@@ -734,6 +734,11 @@
                                     <span class="lang-zh">1.5小时</span>
                                     <span class="lang-en">1.5 hours</span>
                                 </p>
+                                <p class="text-sm text-orange-500 font-semibold">
+                                <span class="lang-zh">🎁 限时优惠：试课当天报名 5节课包，仅需 $49/节（原价 $57）
+</span>
+                                <span class="lang-en">🎁 Special offer: Sign up for a 5-class package on the day of your trial for only $49/class (original $57)</span>
+                                </p>
                                 <div class="mb-4">
                                     <div class="text-3xl font-bold text-blue-600 mb-1">
                                          $25
@@ -1113,7 +1118,7 @@
         const packageData = {
             trial: {
                 name: { zh: '试课', en: 'Trial Class' },
-                price: 20,
+                price: 25,
                 duration: { zh: '1.5小时', en: '1.5 hours' },
                 type: 'trial',
                 description: { zh: '体验课程，包含材料费', en: 'Experience class, materials included' }
