--- a/pricing.html
+++ b/pricing.html
@@ -121,7 +121,7 @@
             </p>
         </div>
     </footer>
-
+    
     <script>
     // Pricing data with zh/en
     const pricingData = [
@@ -132,7 +132,7 @@
         price: '$25',
         total: '$25',
         discount: { zh: '体验价', en: 'Trial Price' },
-        audience: { zh: '首次体验/试课孩子', en: 'First-timers/Trial students' },
+        audience: { zh: '🎁 限时优惠：试课当天报名 5节课包，仅需 $49/节（原价 $57）', en: '🎁 Special offer: Sign up for a 5-class package on the day of your trial for only $49/class (original $57)' },
         material: true
       },
       {
@@ -199,7 +199,7 @@
     // FAQ
     const faqData = [
       {
-        q: { zh: '试课 $25包含什么？', en: 'What does the $25 trial class include?' },
+        q: { zh: '试课包含什么？', en: 'What does the trial class include?' },
         a: { zh: '试课包含1.5小时的专业指导、所有绘画材料（画布、丙烯颜料、画笔等）以及户外写生场地费用。', en: 'The trial class includes 1.5 hours of professional instruction, all painting materials (canvas, acrylic paint, brushes, etc.), and outdoor sketching venue fees.' }
       },
       {
