--- a/about.html
+++ b/about.html
@@ -173,8 +173,8 @@
                                     </h4>
                                     <div class="space-y-2">
                                         <p>
-                                          <span class="lang-zh"><strong>Art Studio</strong> - 艺术老师与设计师 (2022.3 - 2025.4)</span>
-                                          <span class="lang-en"><strong>Art Studio</strong> - Art Teacher & Designer (2022.3 - 2025.4)</span>
+                                          <span class="lang-zh"><strong>Art Studio</strong> - 艺术老师与设计师 (2022.3 - Current)</span>
+                                          <span class="lang-en"><strong>Art Studio</strong> - Art Teacher & Designer (2022.3 - Current)</span>
                                         </p>
                                         <p>
                                           <span class="lang-zh"><strong>Microsoft(微软)</strong> - 概念艺术实习生 (2024.12 - 2025.2)</span>
